package Main.Report;

public interface Affordable {
    double getCost();
}
